exclude clojure.core/random-uuid